--- a/stacks/linked/debug/docker-stack.yml
+++ b/stacks/linked/debug/docker-stack.yml
@@ -1,25 +1,16 @@
-#no-touch#
-
----
-version: "3.3"
+version: '3.3'
 
 services:
-  # https://hub.docker.com/r/basi/amir20/dozzle
   dozzle:
-    image: amir20/dozzle
+    image: amir20/dozzle:latest
     ports:
       - 8888:8888
-    networks:
-      - chief_network
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    logging:
+      driver: json-file
     deploy:
-      mode: replicated
-      replicas: 1
       placement:
-        constraints: [node.role == manager]
-
-networks:
-  chief_network:
-    external: true
+        constraints:
+          - node.role == manager
 
