--- a/stacks/linked/debug/docker-stack.yml
+++ b/stacks/linked/debug/docker-stack.yml
@@ -1,16 +1,41 @@
 version: '3.3'
-
 services:
-  dozzle:
-    image: amir20/dozzle:latest
+  code-server:
+    image: ghcr.io/linuxserver/code-server:latest
+    environment:
+      PASSWORD: ''
+      SUDO_PASSWORD: ''
+      PGID: '1000'
+      PUID: '1000'
+      TZ: Europe/Chisinau
     ports:
-      - 8888:8888
+      - 8084:8443
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /appdata/code-server:/config
+      - /home/kira/compose:/compose
+      - /appdata:/appdata
+    networks:
+      - default
     logging:
       driver: json-file
     deploy:
       placement:
         constraints:
           - node.role == manager
-
+  dozzle:
+    image: amir20/dozzle:latest
+    ports:
+      - 8888:8888
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - default
+    logging:
+      driver: json-file
+    deploy:
+      placement:
+        constraints:
+          - node.role == manager
+networks:
+  default:
+    driver: overlay
