--- a/.github/workflows/tf-validate.yml
+++ b/.github/workflows/tf-validate.yml
@@ -3,8 +3,7 @@ name: Terraform validate
 on: [ push ]
 
 jobs:
-  labelDesign:
-    name: Label design-review when approved by dev
+  validate:
     runs-on: ubuntu-latest
     steps:
       - uses: hashicorp/setup-terraform@v1
