--- a/helm/jackett/Chart.yaml
+++ b/helm/jackett/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: jackett
-description: A Helm chart for Kubernetes
+description: API support for torrents
 type: application
 version: 0.1.0
 appVersion: "v0.18.545-ls39"
