--- a/.github/workflows/helm-validate.yml
+++ b/.github/workflows/helm-validate.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    - run: pwd
+    - run: ls
     - name: helm-check
       uses: igabaydulin/helm-check-action@0.2.0
       env:
