--- a/helm/base/templates/service.yaml
+++ b/helm/base/templates/service.yaml
@@ -9,6 +9,6 @@ spec:
   ports:
     - name: http
       protocol: TCP
-      port: 80
-      nodePort: {{ .Values.service.externalPort }}
-      targetPort: {{ .Values.service.internalPort }}
+      port: {{ .Values.service.port }}
+      nodePort: {{ .Values.service.nodePort }}
+      targetPort: {{ .Values.service.targetPort }}
