Allow use of https in service

--- a/helm/base/templates/service.yaml
+++ b/helm/base/templates/service.yaml
@@ -7,7 +7,7 @@ spec:
   selector:
     app: {{ .Release.Name }}
   ports:
-    - name: http
+    - name: {{ .Values.service.name | default "http" | quote }}
       protocol: TCP
       port: {{ .Values.service.port }}
       nodePort: {{ .Values.service.nodePort }}
