--- a/helm/pomerium/values.yaml
+++ b/helm/pomerium/values.yaml
@@ -5,9 +5,6 @@ image:
   tag: latest
   pullPolicy: Always
 
-service:
-  externalIP:
-
 env:
   ADMINISTRATORS: igor.leahu24@gmail.com
   AUTHENTICATE_SERVICE_URL: https://auth.hobroker.me
@@ -23,38 +20,38 @@ env:
 
 volumes:
   - name: pomerium-config
-    hostPath: '/appdata/pomerium/config'
-    containerPath: '/config'
+    hostPath: "/appdata/pomerium/config"
+    containerPath: "/config"
   - name: pomerium-data
-    hostPath: '/appdata/pomerium/data'
-    containerPath: '/data'
+    hostPath: "/appdata/pomerium/data"
+    containerPath: "/data"
 
 # https://www.pomerium.io/reference/#policy
 policy:
   - from: https://jackett.hobroker.me
-    to: http://jackett-service
+    to: http://jackett-service:9117
     preserve_host_header: true
     allowed_users:
       - igor.leahu24@gmail.com
 
   - from: https://radarr.hobroker.me
-    to: http://radarr-service
+    to: http://radarr-service:7878
     allowed_users:
       - igor.leahu24@gmail.com
 
   - from: https://sonarr.hobroker.me
-    to: http://sonarr-service
+    to: http://sonarr-service:8989
     allowed_users:
       - igor.leahu24@gmail.com
 
   - from: https://qbittorrent.hobroker.me
-    to: http://qbittorrent-service:30004
+    to: http://qbittorrent-service:8112
     preserve_host_header: true
     allowed_users:
       - igor.leahu24@gmail.com
 
   - from: https://code.hobroker.me
-    to: http://code-server-service
+    to: http://code-server-service:8443
     allow_websockets: true
     allowed_users:
       - igor.leahu24@gmail.com
