Enable grafana metrics

--- a/helm/grafana.yaml
+++ b/helm/grafana.yaml
@@ -23,3 +23,4 @@ env:
   GF_AUTH_PROXY_HEADER_PROPERTY: "username"
   GF_AUTH_PROXY_AUTO_SIGN_UP: true
   GF_AUTH_PROXY_ENABLE_LOGIN_TOKEN: false
+  GF_METRICS_ENABLED: true
