--- a/helm/grafana.yaml
+++ b/helm/grafana.yaml
@@ -5,9 +5,11 @@ image:
   tag: 8.1.2
   pullPolicy: Always
 
-service:
-  port: 5000
-  targetPort: 3000
+ports:
+  - name: http
+    protocol: TCP
+    port: 5000
+    containerPort: 3000
 
 volumes:
   - name: grafana-lib
