--- a/helm/jackett.yaml
+++ b/helm/jackett.yaml
@@ -5,9 +5,11 @@ image:
   tag: v0.18.545-ls39
   pullPolicy: Always
 
-service:
-  port: 9117
-  targetPort: 9117
+ports:
+  - name: http
+    protocol: TCP
+    port: 9117
+    containerPort: 9117
 
 volumes:
   - name: jackett-pv-config
