--- a/helm/prometheus.yaml
+++ b/helm/prometheus.yaml
@@ -5,9 +5,11 @@ image:
   tag: v2.29.2
   pullPolicy: Always
 
-service:
-  port: 9090
-  targetPort: 9090
+ports:
+  - name: http
+    protocol: TCP
+    port: 9090
+    containerPort: 9090
 
 volumes:
   - name: prometheus-etc
