--- a/helm/qbittorrent.yaml
+++ b/helm/qbittorrent.yaml
@@ -5,10 +5,11 @@ image:
   tag: version-14.3.7.99202108032349-7395-0415c0c6fubuntu20.04.1
   pullPolicy: Always
 
-service:
-  port: 8112
-  nodePort: 8112
-  targetPort: 8112
+ports:
+  - name: http
+    protocol: TCP
+    port: 8112
+    containerPort: 8112
 
 volumes:
   - name: qbittorrent-config
