--- a/helm/radarr.yaml
+++ b/helm/radarr.yaml
@@ -5,9 +5,11 @@ image:
   tag: 3.2.2.5080-ls112
   pullPolicy: Always
 
-service:
-  port: 7878
-  targetPort: 7878
+ports:
+  - name: http
+    protocol: TCP
+    port: 7878
+    containerPort: 7878
 
 volumes:
   - name: radarr-config
