--- a/helm/sonarr.yaml
+++ b/helm/sonarr.yaml
@@ -5,9 +5,11 @@ image:
   tag: version-3.0.6.1265
   pullPolicy: Always
 
-service:
-  port: 8989
-  targetPort: 8989
+ports:
+  - name: http
+    protocol: TCP
+    port: 8989
+    containerPort: 8989
 
 volumes:
   - name: sonarr-config
