Remove unnecessary fields

--- a/helm/base/templates/service.yaml
+++ b/helm/base/templates/service.yaml
@@ -8,7 +8,7 @@ spec:
     app: {{ .Release.Name }}
   ports:
     {{- range .Values.ports }}
-    - name: {{ .name | default "htto" | quote }}
+    - name: port-{{ .containerPort }}
       protocol: {{ .protocol | default "TCP" | quote }}
       targetPort: {{ .containerPort }}
       port: {{ .port }}
