--- a/helm/grafana.yaml
+++ b/helm/grafana.yaml
@@ -6,9 +6,7 @@ image:
   pullPolicy: Always
 
 ports:
-  - name: http
-    protocol: TCP
-    port: 5000
+  - port: 5000
     containerPort: 3000
 
 volumes:
