--- a/helm/httpbin.yaml
+++ b/helm/httpbin.yaml
@@ -6,9 +6,7 @@ image:
   pullPolicy: Always
 
 ports:
-  - name: http
-    protocol: TCP
-    port: 8080
+  - port: 8080
     containerPort: 80
 
 volumes:
