--- a/helm/jackett.yaml
+++ b/helm/jackett.yaml
@@ -6,9 +6,7 @@ image:
   pullPolicy: Always
 
 ports:
-  - name: http
-    protocol: TCP
-    port: 9117
+  - port: 9117
     containerPort: 9117
 
 volumes:
