--- a/helm/tautulli.yaml
+++ b/helm/tautulli.yaml
@@ -6,9 +6,7 @@ image:
   pullPolicy: Always
 
 ports:
-  - name: http
-    protocol: TCP
-    port: 8181
+  - port: 8181
     containerPort: 8181
 
 volumes:
